--- a/Develop/index.html
+++ b/Develop/index.html
@@ -21,7 +21,7 @@
             readonly
             id="password"
             placeholder="Your Secure Password"
-            aria-label="Generated Password"
+            aria-label="Generated Password" 
           ></textarea>
         </div>
         <div class="card-footer">
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="fakescriptt.js"></script>
   </body>
 </html>
